doc: 完成测试文档

--- a/Iteration_1/测试文档.md
+++ b/Iteration_1/测试文档.md
@@ -8,12 +8,11 @@
 
 文档更新记录表：
 
-| 修改人员 | 日期      | 变更原因               | 版本号 |
-| -------- | --------- | ---------------------- | ------ |
-| 戎鑫     | 2021.3.19 | 初始化文档             | V1.0   |
-| 巫夷     | 2021.3.19 | 完成文档测试内容       | V1.1   |
-| 赵睿豪   | 2021.3.19 | 完成文档测试内容       | V1.2   |
-| 巫夷     | 2021.4.18 | 完成迭代二测试文档内容 | V2.0   |
+| 修改人员 | 日期      | 变更原因         | 版本号 |
+| -------- | --------- | ---------------- | ------ |
+| 戎鑫     | 2021.3.19 | 初始化文档       | V1.0   |
+| 巫夷     | 2021.3.19 | 完成文档测试内容 | V1.1   |
+| 赵睿豪   | 2021.3.19 | 完成文档测试内容 | V1.2   |
 
 [TOC]
 
@@ -64,9 +63,9 @@
 	</tr>
 	<tr>
          <td colspan="1">1</td>
-	    <td colspan="1">保存图谱信息</td>
-        <td colspan="1">图谱文件不全，不予保存</td>
-        <td colspan="1">图谱文件不全，不予保存，并给与前端通知</td>
+	    <td colspan="1">输入图谱信息</td>
+        <td colspan="1">获得图谱信息并通知前端</td>
+        <td colspan="1">前端信息通知正确</td>
         <td colspan="1">Pass</td>
         <td colspan="1"></td>
 	</tr>
@@ -74,14 +73,13 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">巫夷</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.18</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
 	    <td colspan="2">1人日</td>
 	</tr>
 </table>
-
 
 
 <table>
@@ -97,11 +95,11 @@
 	    <td colspan="1">是否有测试代码</td>
 	    <td colspan="1">是</td>
         <td colspan="2">测试代码</td>
-        <td colspan="2">getAllChartsTest1</td>
+        <td colspan="2">saveChartTest2</td>
 	</tr>
 	<tr>
 	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录并进入图谱列表，用户有图谱被保存</td>
+	    <td colspan="4">用户登录并进入图谱编辑</td>
 	</tr>
 	<tr>
 	    <td colspan="1">序号</td>
@@ -113,171 +111,23 @@
 	</tr>
 	<tr>
          <td colspan="1">1</td>
-	    <td colspan="1">获取所有图表信息</td>
-        <td colspan="1">获取所有图表信息</td>
-        <td colspan="1">获取所有图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
+	    <td colspan="1">输入图谱信息</td>
+        <td colspan="1">获得图谱信息并通知前端</td>
+        <td colspan="1">前端信息通知正确</td>
+        <td colspan="1">Fail</td>
+        <td colspan="1">未考虑到图谱为空的情况</td>
 	</tr>
 	<tr>
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">巫夷</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.18</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
 	    <td colspan="2">1人日</td>
 	</tr>
 </table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartServiceTest-003</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartService</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getAllChartsTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录并进入图谱列表，用户没有图谱被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">获取所有图表信息</td>
-        <td colspan="1">获取图表信息为空</td>
-        <td colspan="1">获取图表信息为空</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartServiceTest-004</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartService</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getUserChartsTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录并进入图谱列表，用户有保存的图谱</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">请求获取用户图谱列表</td>
-        <td colspan="1">获取用户图谱列表</td>
-        <td colspan="1">获取用户图谱列表</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartServiceTest-005</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartService</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getUserChartsTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录并进入图谱列表，用户没有保存的图谱</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">请求获取用户图谱列表</td>
-        <td colspan="1">获取的用户图谱列表为空</td>
-        <td colspan="1">获取的用户图谱列表为空</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
 
 
 <table>
@@ -319,7 +169,7 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
@@ -368,7 +218,7 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
@@ -417,7 +267,7 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
@@ -466,7 +316,7 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
@@ -515,7 +365,7 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
@@ -564,898 +414,13 @@
 	    <td colspan="1">测试人员</td>
 	    <td colspan="2">赵睿豪</td>
          <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
+	    <td colspan="2">2021.3.19</td>
 	</tr>
 	<tr>
 	    <td colspan="4">测试用例实际执行成本</td>
 	    <td colspan="2">1人日</td>
 	</tr>
 </table>
-
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-001</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getUserChartsTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录且有图谱被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取所有的图表信息</td>
-        <td colspan="1">用户成功获取所有的图表信息</td>
-        <td colspan="1">用户成功获取所有的图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-002</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getUserChartsTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录且有图谱被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取所有的图表信息</td>
-        <td colspan="1">用户成功获取所有的图表信息</td>
-        <td colspan="1">用户成功获取所有的图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-003</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getUserChartsTest3</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户登录且有图谱被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取所有的图表信息</td>
-        <td colspan="1">收到没有图表的信息</td>
-        <td colspan="1">用户获取空的图表</td>
-        <td colspan="1">Fail</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-004</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getAllChartsTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">数据库中有图表</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">获取所有的图表信息</td>
-        <td colspan="1">获取所有图表的信息</td>
-        <td colspan="1">获取所有图表的信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-005</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getAllChartsTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">数据库中有图表</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">获取所有的图表信息</td>
-        <td colspan="1">获取所有的图表信息</td>
-        <td colspan="1">获取所有的图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-006</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getChartTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户有图表被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-007</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getChartTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户有图表被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-008</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">getChartTest3</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户没有图表被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户获取单个图表信息</td>
-        <td colspan="1">用户无法获取图表信息，并被告知信息</td>
-        <td colspan="1">用户获取空的图表信息</td>
-        <td colspan="1">Fail</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-009</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">deleteChartTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户存在图表被保存</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户删除图表</td>
-        <td colspan="1">用户成功删除图表</td>
-        <td colspan="1">用户成功删除图表</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-010</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">deleteChartTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户没有保存的图表</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户删除图表</td>
-        <td colspan="1">用户无法删除图表，并被告知错误信息</td>
-        <td colspan="1">用户删除图表报错</td>
-        <td colspan="1">Fail</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-011</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">saveChartTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户进入编辑界面</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户保存图表</td>
-        <td colspan="1">用户成功保存图表，并获取通知信息</td>
-        <td colspan="1">成功保存图表</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">ChartControllerTest-012</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">ChartController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">saveChartTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户进入编辑界面</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">用户保存图表</td>
-        <td colspan="1">用户无法保存图表，并被通知错误信息</td>
-        <td colspan="1">未保存图表，并告知错误信息</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">巫夷</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-001</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">registerTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户尚未登录</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">输入注册账号信息</td>
-        <td colspan="1">记录账号信息并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-002</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">registerTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户尚未登录</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">输入注册账户信息</td>
-        <td colspan="1">发现账号已被注册并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-003</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">codeTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户输入邮箱并获取验证码</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-         <td colspan="1">1</td>
-	    <td colspan="1">输入验证码及邮箱</td>
-        <td colspan="1">成功发送邮件并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-004</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">codeTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户输入邮箱并获取验证码</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">输入验证码及邮箱</td>
-        <td colspan="1">发现无有效输入信息并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-005</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">loginTest1</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户输入邮箱及密码登录</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">输入邮箱及密码</td>
-        <td colspan="1">获得用户信息并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
-
-<table>
-	<tr>
-	    <th colspan="3">测试用例编号</th>
-	    <th colspan="3">UserControllerTest-006</th>
-	</tr >
-	<tr >
-	    <td colspan="2">测试单元</td>
-        <td colspan="4">UserController</td>
-	</tr>
-	<tr>
-	    <td colspan="1">是否有测试代码</td>
-	    <td colspan="1">是</td>
-        <td colspan="2">测试代码</td>
-        <td colspan="2">loginTest2</td>
-	</tr>
-	<tr>
-	    <td colspan="2">前提条件</td>
-	    <td colspan="4">用户输入邮箱及密码登录</td>
-	</tr>
-	<tr>
-	    <td colspan="1">序号</td>
-	    <td colspan="1">步骤及操作</td>
-        <td colspan="1">预期结果</td>
-        <td colspan="1">实际执行结果</td>
-        <td colspan="1">Pass/Fail</td>
-        <td colspan="1">备注</td>
-	</tr>
-	<tr>
-        <td colspan="1">1</td>
-	    <td colspan="1">输入邮箱及密码</td>
-        <td colspan="1">发现密码错误或该邮箱不存在并通知前端</td>
-        <td colspan="1">前端信息通知正确</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1"></td>
-	</tr>
-	<tr>
-	    <td colspan="1">测试人员</td>
-	    <td colspan="2">赵睿豪</td>
-         <td colspan="1">测试日期</td>
-	    <td colspan="2">2021.4.17</td>
-	</tr>
-	<tr>
-	    <td colspan="4">测试用例实际执行成本</td>
-	    <td colspan="2">1人日</td>
-	</tr>
-</table>
-
-
 
 # 2. 集成测试报告
 
@@ -1513,7 +478,7 @@
 
 ### 2.3.1 测试结果记录
 
-#### （1）针对图表组件的集成测试
+#### （1）针对图标组件的集成测试
 
 图表保存的成功场景
 
@@ -1564,152 +529,6 @@
         <td colspan="1">1人日</td>
 	</tr>
 </table>
-获取用户所有图表的成功场景
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr >
-	<tr >
-	    <td colspan="1">测试用户获取自己所有的图表信息</td>
-	    <td colspan="1">getUserChartsTest1</td>
-        <td colspan="1">用户账号存在，且有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面</td>
-        <td colspan="1">获取成功</td>
-        <td colspan="1">获取成功</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr >
-	<tr >
-	    <td colspan="1">测试用户获取自己所有的图表信息</td>
-	    <td colspan="1">getUserChartsTest2</td>
-        <td colspan="1">用户账号存在，且有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面</td>
-        <td colspan="1">获取成功</td>
-        <td colspan="1">获取成功</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
-获取用户所有图表的失败场景
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr>
-	<tr>
-	    <td colspan="1">测试用户获取自己所有的图表信息</td>
-	    <td colspan="1">getUserChartsTest3</td>
-        <td colspan="1">用户账号存在，且有没有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面</td>
-        <td colspan="1">通知用户没有图谱被保存</td>
-        <td colspan="1">用户没有被告知未保存任何图谱</td>
-        <td colspan="1">Fail</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
-获取用户单个图表的成功场景
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr>
-	<tr>
-	    <td colspan="1">测试用户获取选中的图表信息</td>
-	    <td colspan="1">getChartTest1</td>
-        <td colspan="1">用户账号存在，且有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面<br/>3）用户选中图谱</td>
-        <td colspan="1">进入图谱编辑界面，并正确展示图谱</td>
-        <td colspan="1">进入图谱编辑界面，并正确展示图谱</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr>
-	<tr>
-	    <td colspan="1">测试用户获取选中的图表信息</td>
-	    <td colspan="1">getChartTest2</td>
-        <td colspan="1">用户账号存在，且有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面<br/>3）用户选中图谱</td>
-        <td colspan="1">进入图谱编辑界面，并正确展示图谱</td>
-        <td colspan="1">进入图谱编辑界面，并正确展示图谱</td>
-        <td colspan="1">Pass</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
-删除用户图表的失败场景
-
-<table>
-	<tr>
-	    <th colspan="1">测试目的</th>
-	    <th colspan="1">涉及测试用例</th>
-        <th colspan="1">依赖条件</th>
-        <th colspan="1">测试步骤</th>
-        <th colspan="1">预期结果</th>
-        <th colspan="1">实际结果</th>
-        <th colspan="1">Pass/Fail</th>
-        <th colspan="1">实际执行成本</th>
-	</tr>
-	<tr>
-	    <td colspan="1">测试用户删除选中的图表</td>
-	    <td colspan="1">deleteChartTest1</td>
-        <td colspan="1">用户账号存在，且有图表被保存</td>
-        <td colspan="1">1）用户登录账户<br/>2）用户进入图谱界面<br/>3）用户选中图谱并删除</td>
-        <td colspan="1">图谱被删除并重新展示图谱</td>
-        <td colspan="1">图谱被删除，但仍然被展示</td>
-        <td colspan="1">Fail</td>
-        <td colspan="1">1人日</td>
-	</tr>
-</table>
-
 #### （2）针对注册组件的集成测试
 
 注册的成功场景
@@ -1891,7 +710,6 @@
 	</tr>
 </table>
 
-
 ### 2.3.2 测试结果分析
 
 #### 2.3.2.1 测试结果统计
@@ -1973,7 +791,6 @@
 | 阶段     | 测试内容           | 开始时间  | 结束时间  | 负责人                     |
 | -------- | ------------------ | --------- | --------- | -------------------------- |
 | 第一阶段 | 功能测试，性能测试 | 2021.3.19 | 2021.3.19 | 何文兵，赵睿豪，戎鑫，巫夷 |
-| 第二阶段 | 功能测试，性能测试 | 2021.4.17 | 2021.4.17 | 何文兵，赵睿豪，戎鑫，巫夷 |
 
 ## 3.2测试概要
 
@@ -2037,28 +854,6 @@
 | 结论     | Fail                                              |
 | 执行成本 | 0.25人日                                          |
 
-#### （5）针对知识图谱文件读入处理功能的系统测试
-
-| 测试编号 | ST-FT005                                                     |
-| -------- | ------------------------------------------------------------ |
-| 测试功能 | 用户将知识图谱的文件读入                                     |
-| 用例描述 | 用户上传本地的知识图谱文件，并分析                           |
-| 预测结果 | 1）用户上传知识图谱文件<br/>2）用户编辑该知识图谱文件生成的图谱 |
-| 实际结果 | 用户成功读取知识图谱信息并可以编辑，但错误的知识图谱文件无法告知用户错误信息 |
-| 结论     | Fail                                                         |
-| 执行成本 | 0.25人日                                                     |
-
-#### （6）针对用户浏览个人知识图谱列表功能的系统测试
-
-| 测试编号 | ST-FT006                                                     |
-| -------- | ------------------------------------------------------------ |
-| 测试功能 | 用户浏览个人的知识图谱列表                                   |
-| 用例描述 | 用户成功登陆后，浏览自己的知识图谱列表                       |
-| 预测结果 | 1）用户获取自己全部的知识图谱列表<br/>2）用户能够选择自己的知识图谱进入编辑界面 |
-| 实际结果 | 用户成功浏览自己的列表，并能选择知识图谱进行编辑             |
-| 结论     | Pass                                                         |
-| 执行成本 | 0.25人日                                                     |
-
 ### 3.3.2性能测试
 
 #### （1）针对响应时间的性能测试
@@ -2081,55 +876,6 @@
 | 结论     | Pass                   |
 | 执行成本 | 2人日                  |
 
-| 测试编号 | ST-PT003               |
-| -------- | ---------------------- |
-| 性能描述 | 用户保存图谱的响应时间 |
-| 前提条件 | 用户已进入图谱编辑界面 |
-| 期望性能 | 系统在0.5秒内响应      |
-| 实际结果 | 系统响应时间为0.2秒    |
-| 结论     | Pass                   |
-| 执行成本 | 1人日                  |
-
-| 测试编号 | ST-PT004                     |
-| -------- | ---------------------------- |
-| 性能描述 | 用户获取保存的图谱的响应时间 |
-| 前提条件 | 用户选择保存的图谱           |
-| 期望性能 | 系统在0.5秒内响应            |
-| 实际结果 | 系统响应时间为0.2秒          |
-| 结论     | Pass                         |
-| 执行成本 | 1人日                        |
-
-#### （2）针对图谱处理时间的性能测试
-
-| 测试编号 | ST-PT001                             |
-| -------- | ------------------------------------ |
-| 性能描述 | 用户修改图谱信息，图谱重新呈现的时间 |
-| 前提条件 | 用户确认编辑的图谱                   |
-| 期望性能 | 系统在0.5秒内响应                    |
-| 实际结果 | 系统响应时间为0.3秒                  |
-| 结论     | Pass                                 |
-| 执行成本 | 1人日                                |
-
-| 测试编号 | ST-PT002                         |
-| -------- | -------------------------------- |
-| 性能描述 | 用户选择图谱模式，图谱展现的时间 |
-| 前提条件 | 用户确认图谱以另一种模式展现     |
-| 期望性能 | 系统在0.5秒内响应                |
-| 实际结果 | 系统响应时间为0.7秒              |
-| 结论     | Fail                             |
-| 执行成本 | 1人日                            |
-
-#### （3）针对文件数据读取时间的性能测试
-
-| 测试编号 | ST-PT001                             |
-| -------- | ------------------------------------ |
-| 性能描述 | 用户输入文件，系统读取文件数据的时间 |
-| 前提条件 | 用户输入文件                         |
-| 期望性能 | 系统在1秒内响应                      |
-| 实际结果 | 系统响应时间为0.8秒                  |
-| 结论     | Pass                                 |
-| 执行成本 | 1人日                                |
-
 ## 3.4测试结果及分析
 
 ### 3.4.1BUG分布结果
@@ -2139,19 +885,18 @@
 | 注册         | 0       |
 | 登录         | 0       |
 | 图谱修改     | 2       |
-| 图谱读入     | 2       |
 | 图谱信息导出 | 0       |
 | 图谱保存     | 1       |
 | 总计         | 3       |
 
 ### 3.4.2系统质量属性评价
 
-| 质量属性 | 已完成                                         | 缺陷                         |
-| -------- | ---------------------------------------------- | ---------------------------- |
-| 功能性   | 基本实现了各个功能                             |                              |
-| 易用性   | 通过点击和文字提示非常容易使用                 | 图谱修改时，用户无法操作图谱 |
-| 可靠性   | 系统不容易崩溃，且容易恢复                     | 图谱的信息修改具有不稳定性   |
-| 效率     | 响应时间快，用户体验良好                       |                              |
-| 可维护性 | 对函数和模块经行了很好的封装，使用了前后端分离 |                              |
-| 可移植性 | 对功能进行了很好的封装和接口设计               | 前端的图谱编辑页面代码量过大 |
+| 质量属性 | 已完成                           | 缺陷                                             |
+| -------- | -------------------------------- | ------------------------------------------------ |
+| 功能性   | 基本实现了各个功能               | 图谱数据的持久化保存没有实现，用户权限还存在问题 |
+| 易用性   | 通过点击和文字提示非常容易使用   | 图谱修改时，用户无法直观看到图谱，只有输入框     |
+| 可靠性   | 系统不容易崩溃，且容易恢复       |                                                  |
+| 效率     | 响应时间快，用户体验良好         |                                                  |
+| 可维护性 | 对函数和模块经行了很好的封装     | 使用了现有框架，更换框架的代价很大               |
+| 可移植性 | 对功能进行了很好的封装和接口设计 |                                                  |
 
